[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
anyhow = "1.0.93"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
async-trait = "0.1.83"
config = "0.14.1"
bincode = "1.3.3"
